--- a/login.html
+++ b/login.html
@@ -12,29 +12,54 @@
       rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
-
 <body>
-    <Header>
-        <div class = "NavContainer">
-            <Nav class = "MainNav">
-                <div class = "NavImage">
-                    <img src="images/hallstatt_logo.png" alt="">
-                </div>
-                <div class = "NavListItem">
-                    <a href="./index.html">Home</a>
-                </div>
-                <div class = "NavListItem">
-                    <a href="./about.html">About</a>
-                </div>
-                <div class = "NavListItem">
-                    <a href="./ourTeam.html">Our Team</a>
-                </div>
-                <div class = "NavListItem">
-                    <a href="./login.html">Login</a>
-                </div>
-            </Nav>
+    <header>
+        <section class="logo">
+            <img src="./images/hallstatt_logo.png" alt="">
+            <h1>Hallstatt</h1>
+        </section>
+        <section>
+            <nav>
+                <button class="mobile-menu-btn">☰</button>
+                <ul class="nav-links">
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./our-team.html">Our Team</a></li>
+                    <li><a href="./login.html">Login</a></li>
+                </ul>
+            </nav> 
+        </section>
+    </header>
+
+   <section>
+    <h1>
+        Login to your account
+    </h1>
+   </section>
+
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section1">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="./about.html">About Us</a></li>
+                    <li><a href="./our-team.html">Our Team</a></li>
+                    <li><a href="./login.html">Login</a></li>
+                </ul>
+            </div>
+            <div class="footer-section2">
+                <h3>Contact</h3>
+                <p>Address: Hallstatt Village<br>
+                Salzbuerg, 4823, Austeria</p>
+                <p>Phone: +43 (234) 234 2345<br>
+                Email: info@hallstattt.example</p>
+            </div>
         </div>
-    </Header>
-    
+        <div class="footer-bottom">
+            <p>&copy; 2024 Hallstatt - Future Tourism Project. Robert, Richard & Sam.</p>
+        </div>
+    </footer>
+    <script defer src="./scripts/script.js"></script>
 </body>
 </html>
