liks added to tha logo area - icon added to the browser tab

--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hallstatt - Login</title>
+    <link rel="icon" href="images/hallstatt-icon.png" type="image/png">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,8 +16,8 @@
 <body>
     <header>
         <section class="logo">
-            <img src="./images/hallstatt_logo.png" alt="">
-            <h1>Hallstatt</h1>
+            <a href="./index.html"><img src="./images/hallstatt_logo.png" alt=""></a>
+            <a href="./index.html"><h1>Hallstatt</h1></a>
         </section>
         <section>
             <nav>
