remoev food link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <ul class="nav-links">
                     <li><a href="#">Home</a></li>
                     <li><a href="./about.html">The City</a></li>
-                    <li><a href="./food.html">The Food</a></li>
+                    <!-- <li><a href="./food.html">The Food</a></li> -->
                     <li><a href="./our-team.html">Our Team</a></li>
                     <li><a href="./newsletter.html">Our Newsletter</a></li>
                 </ul>
@@ -95,7 +95,7 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="./about.html">The City</a></li>
-                    <li><a href="./food.html">The Food</a></li>
+                    <!-- <li><a href="./food.html">The Food</a></li> -->
                     <li><a href="./our-team.html">Our Team</a></li>
                     <li><a href="./newsletter.html">Our Newsletter</a></li>
                 </ul>
