--- a/newsletter.html
+++ b/newsletter.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hallstatt - Login</title>
+    <title>Hallstatt - Our Newsletter</title>
     <link rel="icon" href="images/hallstatt-icon.png" type="image/png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -102,6 +102,11 @@
           </form>
         </div>
       </section>
+      <div class="map">
+        <h4>Where To Find Us</h4>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d86198.83210778692!2d13.528229528503264!3d47.53444048959764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4771366f6e414663%3A0x16c165596a26c1ad!2sHallstatt%2C%20Austria!5e0!3m2!1sen!2sca!4v1730698271121!5m2!1sen!2sca" 
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
     </main>
 
     <footer>
